@startuml Ecomerce

class Customer {
    username
    password
    address
    email
    phone
    gender
}

class Agency {
    username
    password
    address
    email
    phone
    gender
}

class Admin {
    + readAgency: Agency
    + createAgency: Agency
    + updateAgency: void
    + deleteAgency: void
    --
    username
    password
    address
    email
    phone
    gender
}

class Cart {
    + getItems(): List<Product>
    + setItems(items: List<Product>): void
}

class Billing {
    + getTotalPrice(): Float
    + setTotalPrice(totalPrice: Float): void
}

class Products {
    + getUsername(): String
    + setUsername(name: String): void
    + getPrice(): Float
    + setPrice(price: Float): void
}

class Transactions {
    + getAmount(): Float
    + setAmount(amount: Float): void
}

Customer "1" -- "n" Cart
Customer "1" -- "n" Transactions
Customer "1" -- "n" Billing
Agency "1" -- "n" Products
Agency "1" -- "n" Transactions
Agency "1" -- "n" Billing
Admin "1" -- "*" Agency : manage

@enduml